<resources>
    <string name="app_name">Indosayur Indonesia Kotlin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="google">Google</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="register">Register</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
</resources>