<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.BaruActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang_di"
            android:textStyle="bold"/>

        <ImageView
            android:layout_marginTop="-35dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo_indosayur1"/>

        <Button
            android:background="@color/Hijau"
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:text="@string/masuk"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <Button
            android:background="@color/Orange"
            android:layout_marginTop="15dp"
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:text="@string/daftar"
            android:textSize="16sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>